# zxptools

./: LICENSE  pyproject.toml
src/zxptools/: __init__.py  build.py  preprocessor.py  type.py
src/zxptools/extension/: __init__.py  extension.py
src/zxptools/extension/data/: __init__.py
src/zxptools/extension/data/base/: __init__.py  base_extension_info.py  product_xml_element_data.py
src/zxptools/extension/data/exi/: __init__.py  exi.py  file_element.py
src/zxptools/extension/data/mxi/: __init__.py  file_element.py  mxi.py
src/zxptools/util/: __init__.py  xml.py
src/zxptools/zxp/: endpoint.py
src/zxptools/zxp/mxi/: __init__.py  extension_info.py  file_element.py  mxi.py  product_element.py
