[build-system]
requires = ["uv_build>=0.9.15,<0.10.0"]
build-backend = "uv_build"

[project]
name = "zxptools"
version = "0.0.0"
requires-python = ">=3.13"
dependencies = ["lxml>=6.0.2"]

[project.optional-dependencies]
dev = ["lxml-stubs>=0.5.1"]

[tool.ruff]
line-length = 79

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.uv.build-backend]
module-name = "zxptools"
module-root = "src"
